--- a/style.css
+++ b/style.css
@@ -14,7 +14,19 @@ body {
     transform: translateY(0);
   }
 }
-
+/* responsive */
+@media (max-width: 600px) {
+  .sobre-container {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+  .sobre-img img {
+    width: 130px;
+    height: 130px;
+    margin-bottom: 1rem;
+  }
+}
 .decor {
   position: absolute;
   width: 40px;
